2_apps/dir_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-itau
  annotations:    
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #nginx.org/rewrites: "serviceName=app1-svc rewrite=/;serviceName=app2-svc rewrite=/"
    nginx.org/rewrites: "serviceName=back2future-quote-service rewrite=/;serviceName=chuck-quote-service rewrite=/"

spec:
  ingressClassName: nginx
  rules:
  - host: apps.itau.com.br
    http:
     paths:
      
      - path: /back
        pathType: Prefix
        backend:
          service:
            name: back2future-quote-service
            port:
              number: 80      
      
      
      - path: /chuck
        pathType: Prefix
        backend:
          service:
            name: chuck-quote-service
            port: 
              number: 8080
